review textarea wraptext solved

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,15 +44,21 @@
 
 thead th {
   background: #343a40;
-  color: white
+  color: white;
+  word-wrap: break-word;
+  max-width: 100px;
+}
+tbody td {
+  word-wrap: break-word;
+  max-width: 100px;
 }
 
 @media (min-width: 768px) {
-  .form-group.row > .col-form-label {
+  .form-group.row>.col-form-label {
     text-align: right;
   }
 }
 
-tbody :hover{
-  background-color:#DCDCDC;
+tbody :hover {
+  background-color: #DCDCDC;
 }
